Another layout bug

--- a/module/CommonBundle/Resources/assets/site/less/layout.less
+++ b/module/CommonBundle/Resources/assets/site/less/layout.less
@@ -8,7 +8,7 @@
 */
 
 body {
-    background: #252525;
+    background: #fff;
     word-wrap: break-word;
 }
 
@@ -273,67 +273,9 @@ header {
 
 footer {
     margin-bottom: 20px;
-    color: #fff;
 
     .container {
         padding: 0 20px;
-        color: @headingsColor;
-    }
-
-    h3 {
-        margin: 0;
-
-        font-family: @headingsFontFamily;
-        font-weight: @headingsFontWeight;
-        font-size: 18px;
-        text-shadow: 0 1px 0 rgba(255, 255, 255, .1);
-
-        color: @black;
-
-        line-height: 40px;
-    }
-
-    .light {
-        margin-bottom: 20px;
-        padding: 16px 0 16px 0;
-        background: #333;
-
-        .nav-list {
-            margin: 0 0 10px 0;
-
-            li {
-                a {
-                    padding-top: 0;
-
-                    background: none;
-
-                    font-family: @headingsFontFamily;
-                    font-weight: @headingsFontWeight;
-                    font-size: 14px;
-                    text-shadow: 0 1px 0 rgba(255, 255, 255, .2);
-
-                    color: @grayLight;
-                }
-
-                a:hover {
-                    background: none;
-                    text-decoration: none;
-                    color: @white;
-                }
-            }
-        }
-
-        .companies {
-            margin-left: 15px;
-        }
-    }
-
-    .copyright {
-        .icons {
-            margin: 0;
-            line-height: 40px;
-            text-align: right;
-        }
     }
 }
 
